added InfoDev Board size and wincondition logique.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,31 @@
     margin-bottom: 30px;
 }
 
+.container {
+  display: flex;
+  gap: 1rem;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin-bottom: 0.5rem;
+  margin-bottom: 15px;
+}
+
+label {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+select {
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
 .player-inputs {
     display: flex;
     flex-direction: column;
@@ -36,7 +61,7 @@
 .player-inputs input {
     padding: 10px;
     font-size: 16px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     border: 2px solid #ccc;
     border-radius: 4px;
 }
